--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -4,7 +4,8 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
 body {
-  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  /*font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;*/
+  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
   overflow-x: hidden;
 }
 p {
@@ -26,7 +27,8 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  /*font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
   text-transform: uppercase;
   font-weight: 700;
 }
@@ -81,7 +83,8 @@ header img {
 }
 header .intro-text .name {
   display: block;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  /*font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
   text-transform: uppercase;
   font-weight: 700;
   font-size: 2em;
@@ -104,7 +107,8 @@ header .intro-text .skills {
 }
 .navbar-custom {
   background: #2C3E50;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  /*font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
   text-transform: uppercase;
   font-weight: 700;
   border: none;
