--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -20,6 +20,7 @@ a:focus,
 a:active,
 a.active {
   color: #18BC9C;
+  /*color: #14a863*/
 }
 h1,
 h2,
@@ -55,7 +56,7 @@ hr.star-light {
   border-color: white;
 }
 hr.star-light:after {
-  background-color: #18BC9C;
+  background-color: #14a863;
   color: white;
 }
 hr.star-primary {
@@ -70,7 +71,7 @@ hr.star-primary:after {
 }
 header {
   text-align: center;
-  background: #18BC9C;
+  background: #14a863;
   color: white;
 }
 header .container {
@@ -185,7 +186,7 @@ section h2 {
   font-size: 3em;
 }
 section.success {
-  background: #18BC9C;
+  background: #14a863;
   color: white;
 }
 @media (max-width: 767px) {
