--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -130,7 +130,8 @@ header .intro-text .skills {
   color: white;
 }
 .navbar-custom .navbar-nav li a:hover {
-  color: #18BC9C;
+  /*color: #18BC9C;*/
+  color: #14a863;
 }
 .navbar-custom .navbar-nav li a:focus,
 .navbar-custom .navbar-nav li a:active {
@@ -138,13 +139,13 @@ header .intro-text .skills {
 }
 .navbar-custom .navbar-nav li.active a {
   color: white;
-  background: #18BC9C;
+  background: #14a863;
 }
 .navbar-custom .navbar-nav li.active a:hover,
 .navbar-custom .navbar-nav li.active a:focus,
 .navbar-custom .navbar-nav li.active a:active {
   color: white;
-  background: #18BC9C;
+  background: #14a863;
 }
 .navbar-custom .navbar-toggle {
   color: white;
@@ -208,7 +209,8 @@ section.success {
   margin: 0 auto;
 }
 #portfolio .portfolio-item .portfolio-link .caption {
-  background: rgba(24, 188, 156, 0.9);
+  /*background: rgba(24, 188, 156, 0.9);*/
+  background: rgb(20, 168, 99, 0.9);
   position: absolute;
   width: 100%;
   height: 100%;
