--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -33,6 +33,7 @@ h6 {
   text-transform: uppercase;
   font-weight: 100;
 }
+
 hr.star-light,
 hr.star-primary {
   padding: 0;
@@ -210,7 +211,7 @@ section.success {
 }
 #portfolio .portfolio-item .portfolio-link .caption {
   /*background: rgba(24, 188, 156, 0.9);*/
-  background: rgb(20, 168, 99, 0.9);
+  background: rgba(20, 168, 99, 0.9);
   position: absolute;
   width: 100%;
   height: 100%;
